--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,15 @@
 .App {
-  text-align: center;
+  background-color: aliceblue;
 }
 
 .App-logo {
   height: 40vmin;
   pointer-events: none;
+}
+
+
+#root {
+  height: 100%;
 }
 
 @media (prefers-reduced-motion: no-preference) {
