--- a/public/reset.css
+++ b/public/reset.css
@@ -22,6 +22,7 @@ time, mark, audio, video {
 	font: inherit;
 	vertical-align: baseline;
 	box-sizing: border-box;
+	font-display: swap;
 }
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure, 
@@ -46,4 +47,3 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
-
