feat: search 아이콘 svg => png 파일로 변경

--- a/src/App.css
+++ b/src/App.css
@@ -8,11 +8,13 @@ body{
 
 @font-face {
   font-family: maple-bold;
+  font-display: swap;
   src: url("./font/Maplestory\ Bold.ttf");
 }
 
 @font-face {
   font-family: maple-light;
+  font-display: swap;
   src: url("./font/Maplestory\ Light.ttf");
 }
 
