feat: footer 재적용, font display swap 적용

--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,7 @@ body{
   src: url('./fonts/Maplestory_Bold.woff2') format('woff2');
   font-weight: bold;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -20,6 +21,7 @@ body{
   src: url('./fonts/Maplestory_Light.woff2') format('woff2');
   font-weight: 300;
   font-style: normal;
+  font-display: swap;
 }
 
 
