fix: dom 깊이 최소화

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,28 @@
+
+
+
+@font-face {
+  font-family: 'maple-bold';
+  src: url('./fonts/Maplestory_Bold.woff2') format('woff2');
+  font-weight: bold;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'maple-light';
+  src: url('./fonts/Maplestory_Light.woff2') format('woff2');
+  font-weight: 300;
+  font-style: normal;
+  font-display: swap;
+}
+
+
 #root {
   position: relative;
   font-size: 14px;
 }
+
 
 ::placeholder{
   color: rgb(3, 3, 3);
